--- a/style.css
+++ b/style.css
@@ -2,41 +2,247 @@
     margin: 0px;
 }
 
-body{
-    background-color: rgba(188, 143, 143, 0.158);
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif !important;
 }
 
-.container{
-    padding: 20px;
 
-}
+
+.topnav {
+   
+    overflow: hidden;
+    background-color: rgba(36, 19, 43, 0.466);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    
+  }
+  
+  .topnav a {
+    float: left;
+  
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: 'Bitter', serif;
+  }
+
+
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #5a2653;
+    color: white;
+  }
+
+  .topnav a.active:hover {
+    background-color: #fdc4f6;
+    color: rgb(47, 15, 48);
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+
+
+
+
+
+
 
 .container h1{
     font-size: 10em;
     font-family: 'Bitter', serif;
- 
 }
+
+@media screen and (max-width: 701px) {
+    div.container h1 {
+      font-size: 130px;
+      padding-left: 10px;
+    }
+  }
+
+.container h3{
+    font-size: 4em;
+    font-family: 'Bitter', serif;
+    color: white;
+    margin-top:0px;
+}
+
+.container h4{
+    font-size: 25px;
+    color: rgb(252, 220, 255);
+    font-family: 'Times New Roman', Times, serif;
+}
+
+@media screen and (max-width: 501px) {
+    div.container h4 {
+      font-size: 15px;
+      padding-left: 10px;
+    }
+  }
+
 
 .container p {
     padding-bottom: 15%;
 }
 
-.title{
+.col-sm{
+    padding-bottom: 15px;
+    padding-top: 15px;
+}
+
+@media screen and (max-width: 501px) {
+    div.col-sm {
+      padding: 15px 60px;
+    }
+  }
+
+.title , .title2 {
     width:1100px;
     overflow: hidden;
     text-align: left;
     margin:0 auto;
-    
 }
+
 .title h1  {
 font-size: 200px;
 text-align: left;
 margin: 0px;
 font-family: 'Anton', sans-serif;
+color: white;
+}
 
+.title2 h1  {
+    font-size: 40px;
+    text-align: left;
+    margin: 0px;
+    
+    color: white;
+    font-family: 'Playfair Display', serif;
+}
+
+.title2 p{
+        color: white;
+        font-family: 'Playfair Display', serif;
+        letter-spacing: 1px;
+}
+
+
+.fullscreen-bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+}
+
+.fullscreen-bg__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    opacity: 0.9;
+    filter:brightness(35%);
+}
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #8064A2 !important;
+    border: 1px solid #8064A2;
+}
+
+
+
+.card{
+background-color: rgba(255, 255, 255, 0.822);
+box-shadow: 
+inset 0 -3em 3em rgba(0,0,0,0.1), 
+      0 0  0 2px rgba(255, 193, 252, 0),
+      0.3em 0.3em 1em rgba(0, 0, 0, 0.753);
+      
+}
+
+.card img{
+    border-radius: 100%;
+
+}
+
+.card-body{
+    display: flex;
+    flex-direction: column;
 }
 
 
 
 
+
+
+.card-body p {
+    padding-bottom: 5px;
+}
+
+
+.text-info {
+    color: #512e52!important;
+}
+
+p.m-0{
+padding-bottom: 30px;
+}
+
+.border-primary {
+    border-color: #ffffff!important;
+    border-width: 0px;
+}
+
+.bg-info {
+    background-color: #512e52!important;
+}
+
+.btn-info {
+    color: #fff;
+    background-color: #512e52;
+    border-width: 0px;
+    
+}
+
+textarea.form-control{
+    height: 200px;
+}
