--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
 }
 
 
+.horizontal {  
+  border: none; 
+  border-bottom: 1px solid rgb(0, 0, 0);  
+ }
 
 .topnav {
    
@@ -77,12 +81,6 @@ body {
     }
   }
 
-
-
-
-
-
-
 .container h1{
     font-size: 10em;
     font-family: 'Bitter', serif;
@@ -90,8 +88,8 @@ body {
 
 @media screen and (max-width: 701px) {
     div.container h1 {
-      font-size: 130px;
-      padding-left: 10px;
+      font-size: 100px;
+      padding-left: 50px;
     }
   }
 
@@ -111,7 +109,8 @@ body {
 @media screen and (max-width: 501px) {
     div.container h4 {
       font-size: 15px;
-      padding-left: 10px;
+      padding-left: 50px;
+      padding-right: 50px;
     }
   }
 
@@ -191,7 +190,10 @@ color: white;
 
 
 .card{
-background-color: rgba(255, 255, 255, 0.822);
+  border-top-left-radius: 190px;
+  border-top-right-radius: 190px;
+  transition: transform 1s;
+background-color: rgba(255, 255, 255, 0.918);
 box-shadow: 
 inset 0 -3em 3em rgba(0,0,0,0.1), 
       0 0  0 2px rgba(255, 193, 252, 0),
@@ -199,23 +201,54 @@ inset 0 -3em 3em rgba(0,0,0,0.1),
       
 }
 
+.card:hover{
+  background-color: rgb(255, 255, 255); 
+}
+
 .card img{
     border-radius: 100%;
+    transition: transform 0.5s;
+    transform: scale(0.92);
+    
+}
 
+.card:hover img{
+  zoom:1.5;
+  transform: scale(0.97);
+ 
 }
 
 .card-body{
     display: flex;
     flex-direction: column;
+    padding-top: 0px;
+  
+    
+}
+
+.card-body h5{
+  font-size: 30px;
+  font-weight: bold;
+  padding-top: 0px;
+  font-family: 'Playfair Display', serif;
+ 
+}
+
+.card-title{
+  padding-top: 0px;
 }
 
 
 
 
-
+h3{
+  margin-bottom: 0px;
+}
 
 .card-body p {
     padding-bottom: 5px;
+    padding-top: 10px;
+    
 }
 
 
@@ -245,4 +278,24 @@ padding-bottom: 30px;
 
 textarea.form-control{
     height: 200px;
+}
+
+
+
+a.pin-ic , a.tw-ic , a.fb-ic , a.gplus-ic , a.li-ic , a.ins-ic  {
+
+  color: white;
+}
+
+
+a.pin-ic:hover , a.tw-ic:hover , a.fb-ic:hover , a.gplus-ic:hover , a.li-ic:hover , a.ins-ic :hover  {
+
+  color: rgb(247, 183, 255);
+
+}
+
+.mb-5 {
+
+display:flex;
+justify-content: center;
 }
